@@ -14,6 +14,8 @@ git-annex (6.20160319) UNRELEASED; urgency=medium
   * log --raw-date: Use to display seconds from unix epoch.
   * v6: Close pointer file handles more quickly, to avoid problems on Windows.
   * sync: Show output of git commit.
+  * annex.thin and annex.hardlink are now supported on Windows.
+  * unannex --fast now makes hard links on Windows.
 
  -- Joey Hess <id@joeyh.name>  Wed, 23 Mar 2016 11:42:36 -0400
 
